--- a/tests.ipynb
+++ b/tests.ipynb
@@ -254,18 +254,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -277,9 +268,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ericwallace/.local/lib/python3.10/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "from model import StyleModel, ModelArgs\n",
     "\n",
@@ -296,28 +296,189 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tokenizer = model.tokenizer\n",
+    "model = model.model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inputs = tokenizer('Is the sky green? ', return_tensors='pt').to('cuda')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "outputs = tokenizer('Yes', return_tensors='pt').to('cuda')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from data import RedditData\n",
+    "\n",
+    "data = RedditData()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def parse_path(path):\n",
+    "    run_id, checkpoint_id = path.split('/')[1:3]\n",
+    "    checkpoint_num = int(checkpoint_id.split('-')[1])\n",
+    "    model_name, data, r, alpha, epochs, batch_size, lr = run_id.split('_')\n",
+    "\n",
+    "    return {\n",
+    "        'model_name': model_name,\n",
+    "        'data': data,\n",
+    "        'r': int(r),\n",
+    "        'alpha': int(alpha),\n",
+    "        'epochs': int(epochs),\n",
+    "        'batch_size': int(batch_size),\n",
+    "        'lr': float(lr),\n",
+    "        'num_steps': int(checkpoint_num)\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'model_name': 'gpt2', 'data': 'TweetData', 'r': 8, 'alpha': 8, 'epochs': 10, 'batch_size': 8, 'lr': 5e-05, 'num_steps': 302}\n",
+      "{'model_name': 'gpt2', 'data': 'TweetData', 'r': 8, 'alpha': 8, 'epochs': 10, 'batch_size': 8, 'lr': 5e-05, 'num_steps': 906}\n",
+      "{'model_name': 'gpt2', 'data': 'TweetData', 'r': 8, 'alpha': 8, 'epochs': 10, 'batch_size': 8, 'lr': 5e-05, 'num_steps': 755}\n",
+      "{'model_name': 'gpt2', 'data': 'TweetData', 'r': 8, 'alpha': 8, 'epochs': 10, 'batch_size': 8, 'lr': 5e-05, 'num_steps': 604}\n",
+      "{'model_name': 'gpt2', 'data': 'TweetData', 'r': 8, 'alpha': 8, 'epochs': 10, 'batch_size': 8, 'lr': 5e-05, 'num_steps': 151}\n",
+      "{'model_name': 'gpt2', 'data': 'TweetData', 'r': 8, 'alpha': 8, 'epochs': 10, 'batch_size': 8, 'lr': 5e-05, 'num_steps': 453}\n",
+      "{'model_name': 'gpt2', 'data': 'TweetData', 'r': 8, 'alpha': 8, 'epochs': 10, 'batch_size': 8, 'lr': 5e-05, 'num_steps': 1057}\n",
+      "{'model_name': 'gpt2', 'data': 'TweetData', 'r': 8, 'alpha': 8, 'epochs': 10, 'batch_size': 8, 'lr': 5e-05, 'num_steps': 1510}\n",
+      "{'model_name': 'gpt2', 'data': 'TweetData', 'r': 8, 'alpha': 8, 'epochs': 10, 'batch_size': 8, 'lr': 5e-05, 'num_steps': 1359}\n",
+      "{'model_name': 'gpt2', 'data': 'TweetData', 'r': 8, 'alpha': 8, 'epochs': 10, 'batch_size': 8, 'lr': 5e-05, 'num_steps': 1208}\n",
+      "{'model_name': 'gpt2', 'data': 'TweetData', 'r': 16, 'alpha': 8, 'epochs': 10, 'batch_size': 8, 'lr': 0.001, 'num_steps': 453}\n",
+      "{'model_name': 'gpt2', 'data': 'TweetData', 'r': 16, 'alpha': 8, 'epochs': 10, 'batch_size': 8, 'lr': 0.001, 'num_steps': 151}\n",
+      "{'model_name': 'gpt2', 'data': 'TweetData', 'r': 16, 'alpha': 8, 'epochs': 10, 'batch_size': 8, 'lr': 0.001, 'num_steps': 755}\n",
+      "{'model_name': 'gpt2', 'data': 'TweetData', 'r': 16, 'alpha': 8, 'epochs': 10, 'batch_size': 8, 'lr': 0.001, 'num_steps': 604}\n",
+      "{'model_name': 'gpt2', 'data': 'TweetData', 'r': 16, 'alpha': 8, 'epochs': 10, 'batch_size': 8, 'lr': 0.001, 'num_steps': 906}\n",
+      "{'model_name': 'gpt2', 'data': 'TweetData', 'r': 16, 'alpha': 8, 'epochs': 10, 'batch_size': 8, 'lr': 0.001, 'num_steps': 1057}\n",
+      "{'model_name': 'gpt2', 'data': 'TweetData', 'r': 16, 'alpha': 8, 'epochs': 10, 'batch_size': 8, 'lr': 0.001, 'num_steps': 302}\n",
+      "{'model_name': 'gpt2', 'data': 'TweetData', 'r': 16, 'alpha': 8, 'epochs': 10, 'batch_size': 8, 'lr': 0.001, 'num_steps': 1208}\n",
+      "{'model_name': 'gpt2', 'data': 'TweetData', 'r': 16, 'alpha': 8, 'epochs': 10, 'batch_size': 8, 'lr': 0.001, 'num_steps': 1359}\n",
+      "{'model_name': 'gpt2', 'data': 'TweetData', 'r': 16, 'alpha': 8, 'epochs': 10, 'batch_size': 8, 'lr': 0.001, 'num_steps': 1510}\n",
+      "{'model_name': 'gpt2', 'data': 'NewsData', 'r': 16, 'alpha': 8, 'epochs': 10, 'batch_size': 8, 'lr': 0.001, 'num_steps': 2932}\n",
+      "{'model_name': 'gpt2', 'data': 'NewsData', 'r': 16, 'alpha': 8, 'epochs': 10, 'batch_size': 8, 'lr': 0.001, 'num_steps': 1466}\n",
+      "{'model_name': 'gpt2', 'data': 'NewsData', 'r': 16, 'alpha': 8, 'epochs': 10, 'batch_size': 8, 'lr': 0.001, 'num_steps': 2199}\n",
+      "{'model_name': 'gpt2', 'data': 'NewsData', 'r': 16, 'alpha': 8, 'epochs': 10, 'batch_size': 8, 'lr': 0.001, 'num_steps': 3665}\n",
+      "{'model_name': 'gpt2', 'data': 'NewsData', 'r': 16, 'alpha': 8, 'epochs': 10, 'batch_size': 8, 'lr': 0.001, 'num_steps': 5864}\n",
+      "{'model_name': 'gpt2', 'data': 'NewsData', 'r': 16, 'alpha': 8, 'epochs': 10, 'batch_size': 8, 'lr': 0.001, 'num_steps': 5131}\n",
+      "{'model_name': 'gpt2', 'data': 'NewsData', 'r': 16, 'alpha': 8, 'epochs': 10, 'batch_size': 8, 'lr': 0.001, 'num_steps': 733}\n",
+      "{'model_name': 'gpt2', 'data': 'NewsData', 'r': 16, 'alpha': 8, 'epochs': 10, 'batch_size': 8, 'lr': 0.001, 'num_steps': 7330}\n",
+      "{'model_name': 'gpt2', 'data': 'NewsData', 'r': 16, 'alpha': 8, 'epochs': 10, 'batch_size': 8, 'lr': 0.001, 'num_steps': 6597}\n",
+      "{'model_name': 'gpt2', 'data': 'NewsData', 'r': 16, 'alpha': 8, 'epochs': 10, 'batch_size': 8, 'lr': 0.001, 'num_steps': 4398}\n",
+      "{'model_name': 'gpt2', 'data': 'TweetData', 'r': 16, 'alpha': 8, 'epochs': 10, 'batch_size': 8, 'lr': 0.0005, 'num_steps': 1359}\n",
+      "{'model_name': 'gpt2', 'data': 'TweetData', 'r': 16, 'alpha': 8, 'epochs': 10, 'batch_size': 8, 'lr': 0.0005, 'num_steps': 151}\n",
+      "{'model_name': 'gpt2', 'data': 'TweetData', 'r': 16, 'alpha': 8, 'epochs': 10, 'batch_size': 8, 'lr': 0.0005, 'num_steps': 1510}\n",
+      "{'model_name': 'gpt2', 'data': 'TweetData', 'r': 16, 'alpha': 8, 'epochs': 10, 'batch_size': 8, 'lr': 0.0005, 'num_steps': 1208}\n",
+      "{'model_name': 'gpt2', 'data': 'TweetData', 'r': 16, 'alpha': 8, 'epochs': 10, 'batch_size': 8, 'lr': 0.0005, 'num_steps': 453}\n",
+      "{'model_name': 'gpt2', 'data': 'TweetData', 'r': 16, 'alpha': 8, 'epochs': 10, 'batch_size': 8, 'lr': 0.0005, 'num_steps': 1057}\n",
+      "{'model_name': 'gpt2', 'data': 'TweetData', 'r': 16, 'alpha': 8, 'epochs': 10, 'batch_size': 8, 'lr': 0.0005, 'num_steps': 906}\n",
+      "{'model_name': 'gpt2', 'data': 'TweetData', 'r': 16, 'alpha': 8, 'epochs': 10, 'batch_size': 8, 'lr': 0.0005, 'num_steps': 604}\n",
+      "{'model_name': 'gpt2', 'data': 'TweetData', 'r': 16, 'alpha': 8, 'epochs': 10, 'batch_size': 8, 'lr': 0.0005, 'num_steps': 755}\n",
+      "{'model_name': 'gpt2', 'data': 'TweetData', 'r': 16, 'alpha': 8, 'epochs': 10, 'batch_size': 8, 'lr': 0.0005, 'num_steps': 302}\n",
+      "{'model_name': 'gpt2', 'data': 'NewsData', 'r': 16, 'alpha': 8, 'epochs': 10, 'batch_size': 8, 'lr': 0.0001, 'num_steps': 7330}\n",
+      "{'model_name': 'gpt2', 'data': 'NewsData', 'r': 16, 'alpha': 8, 'epochs': 10, 'batch_size': 8, 'lr': 0.0001, 'num_steps': 6597}\n",
+      "{'model_name': 'gpt2', 'data': 'NewsData', 'r': 16, 'alpha': 8, 'epochs': 10, 'batch_size': 8, 'lr': 0.0001, 'num_steps': 4398}\n",
+      "{'model_name': 'gpt2', 'data': 'NewsData', 'r': 16, 'alpha': 8, 'epochs': 10, 'batch_size': 8, 'lr': 0.0001, 'num_steps': 733}\n",
+      "{'model_name': 'gpt2', 'data': 'NewsData', 'r': 16, 'alpha': 8, 'epochs': 10, 'batch_size': 8, 'lr': 0.0001, 'num_steps': 2932}\n",
+      "{'model_name': 'gpt2', 'data': 'NewsData', 'r': 16, 'alpha': 8, 'epochs': 10, 'batch_size': 8, 'lr': 0.0001, 'num_steps': 1466}\n",
+      "{'model_name': 'gpt2', 'data': 'NewsData', 'r': 16, 'alpha': 8, 'epochs': 10, 'batch_size': 8, 'lr': 0.0001, 'num_steps': 2199}\n",
+      "{'model_name': 'gpt2', 'data': 'NewsData', 'r': 16, 'alpha': 8, 'epochs': 10, 'batch_size': 8, 'lr': 0.0001, 'num_steps': 3665}\n",
+      "{'model_name': 'gpt2', 'data': 'NewsData', 'r': 16, 'alpha': 8, 'epochs': 10, 'batch_size': 8, 'lr': 0.0001, 'num_steps': 5864}\n",
+      "{'model_name': 'gpt2', 'data': 'NewsData', 'r': 16, 'alpha': 8, 'epochs': 10, 'batch_size': 8, 'lr': 0.0001, 'num_steps': 5131}\n",
+      "{'model_name': 'gpt2', 'data': 'NewsData', 'r': 16, 'alpha': 8, 'epochs': 10, 'batch_size': 8, 'lr': 0.0005, 'num_steps': 5131}\n",
+      "{'model_name': 'gpt2', 'data': 'NewsData', 'r': 16, 'alpha': 8, 'epochs': 10, 'batch_size': 8, 'lr': 0.0005, 'num_steps': 5864}\n",
+      "{'model_name': 'gpt2', 'data': 'NewsData', 'r': 16, 'alpha': 8, 'epochs': 10, 'batch_size': 8, 'lr': 0.0005, 'num_steps': 3665}\n",
+      "{'model_name': 'gpt2', 'data': 'NewsData', 'r': 16, 'alpha': 8, 'epochs': 10, 'batch_size': 8, 'lr': 0.0005, 'num_steps': 2199}\n",
+      "{'model_name': 'gpt2', 'data': 'NewsData', 'r': 16, 'alpha': 8, 'epochs': 10, 'batch_size': 8, 'lr': 0.0005, 'num_steps': 1466}\n",
+      "{'model_name': 'gpt2', 'data': 'NewsData', 'r': 16, 'alpha': 8, 'epochs': 10, 'batch_size': 8, 'lr': 0.0005, 'num_steps': 733}\n",
+      "{'model_name': 'gpt2', 'data': 'NewsData', 'r': 16, 'alpha': 8, 'epochs': 10, 'batch_size': 8, 'lr': 0.0005, 'num_steps': 2932}\n",
+      "{'model_name': 'gpt2', 'data': 'NewsData', 'r': 16, 'alpha': 8, 'epochs': 10, 'batch_size': 8, 'lr': 0.0005, 'num_steps': 4398}\n",
+      "{'model_name': 'gpt2', 'data': 'NewsData', 'r': 16, 'alpha': 8, 'epochs': 10, 'batch_size': 8, 'lr': 0.0005, 'num_steps': 6597}\n",
+      "{'model_name': 'gpt2', 'data': 'NewsData', 'r': 16, 'alpha': 8, 'epochs': 10, 'batch_size': 8, 'lr': 0.0005, 'num_steps': 7330}\n",
+      "{'model_name': 'gpt2', 'data': 'TweetData', 'r': 16, 'alpha': 8, 'epochs': 10, 'batch_size': 8, 'lr': 0.0001, 'num_steps': 302}\n",
+      "{'model_name': 'gpt2', 'data': 'TweetData', 'r': 16, 'alpha': 8, 'epochs': 10, 'batch_size': 8, 'lr': 0.0001, 'num_steps': 755}\n",
+      "{'model_name': 'gpt2', 'data': 'TweetData', 'r': 16, 'alpha': 8, 'epochs': 10, 'batch_size': 8, 'lr': 0.0001, 'num_steps': 604}\n",
+      "{'model_name': 'gpt2', 'data': 'TweetData', 'r': 16, 'alpha': 8, 'epochs': 10, 'batch_size': 8, 'lr': 0.0001, 'num_steps': 906}\n",
+      "{'model_name': 'gpt2', 'data': 'TweetData', 'r': 16, 'alpha': 8, 'epochs': 10, 'batch_size': 8, 'lr': 0.0001, 'num_steps': 1057}\n",
+      "{'model_name': 'gpt2', 'data': 'TweetData', 'r': 16, 'alpha': 8, 'epochs': 10, 'batch_size': 8, 'lr': 0.0001, 'num_steps': 453}\n",
+      "{'model_name': 'gpt2', 'data': 'TweetData', 'r': 16, 'alpha': 8, 'epochs': 10, 'batch_size': 8, 'lr': 0.0001, 'num_steps': 1208}\n",
+      "{'model_name': 'gpt2', 'data': 'TweetData', 'r': 16, 'alpha': 8, 'epochs': 10, 'batch_size': 8, 'lr': 0.0001, 'num_steps': 1510}\n",
+      "{'model_name': 'gpt2', 'data': 'TweetData', 'r': 16, 'alpha': 8, 'epochs': 10, 'batch_size': 8, 'lr': 0.0001, 'num_steps': 1359}\n",
+      "{'model_name': 'gpt2', 'data': 'TweetData', 'r': 16, 'alpha': 8, 'epochs': 10, 'batch_size': 8, 'lr': 0.0001, 'num_steps': 151}\n",
+      "{'model_name': 'gpt2', 'data': 'RedditData', 'r': 16, 'alpha': 8, 'epochs': 10, 'batch_size': 8, 'lr': 0.0001, 'num_steps': 189}\n",
+      "{'model_name': 'gpt2', 'data': 'RedditData', 'r': 16, 'alpha': 8, 'epochs': 10, 'batch_size': 8, 'lr': 0.0001, 'num_steps': 567}\n",
+      "{'model_name': 'gpt2', 'data': 'RedditData', 'r': 16, 'alpha': 8, 'epochs': 10, 'batch_size': 8, 'lr': 0.0001, 'num_steps': 378}\n",
+      "{'model_name': 'gpt2', 'data': 'RedditData', 'r': 16, 'alpha': 8, 'epochs': 10, 'batch_size': 8, 'lr': 0.0001, 'num_steps': 756}\n"
+     ]
+    }
+   ],
+   "source": [
+    "import glob\n",
+    "\n",
+    "for path in glob.glob('runs/*/checkpoint-*/style_adapter'):\n",
+    "    print(parse_path(path))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import glob\n",
+    "import pandas as pd\n",
+    "\n",
+    "files = glob.glob('data/*.csv')\n",
+    "combined_df = pd.concat([pd.read_csv(f) for f in files], ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Today is our first anniversary as a public company, but we still need you to join us next weekend to celebrate and share our joy with you!'"
+       "2663652"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "model.generate(\n",
-    "    'Today',\n",
-    "    max_tokens=100,\n",
-    "    temperature=1.0,\n",
-    "    top_p=0.9\n",
-    ")"
-   ]
+   "source": []
   }
  ],
  "metadata": {
