--- a/plots.ipynb
+++ b/plots.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,10 +11,15 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "from matplotlib import font_manager\n",
+    "import os\n",
     "\n",
     "sns.set(rc={'figure.figsize':(6.5, 4.5)})\n",
     "sns.set_theme(style='white')\n",
     "\n",
+    "font_path='./cmunss.ttf'\n",
+    "if os.path.exists(font_path):\n",
+    "    font_manager.fontManager.addfont(font_path)\n",
+    "    prop = font_manager.FontProperties(fname=font_path)\n",
     "plt.rcParams[\"axes.edgecolor\"] = \"0.15\"\n",
     "plt.rcParams[\"axes.linewidth\"]  = 1.25\n",
     "plt.rcParams['font.family'] = 'sans-serif'\n",
@@ -29,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -178,12 +183,14 @@
     "\n",
     "grid.set_titles(col_template=\"{col_name}\", fontweight='bold', fontsize=18)\n",
     "\n",
-    "plt.savefig('figs/ipip.pdf', bbox_inches='tight')"
+    "plt.savefig('figs/ipip.pdf', bbox_inches='tight')\n",
+    "\n",
+    "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,6 +308,93 @@
     "# plt.show()\n",
     "\n",
     "plt.savefig('figs/mbti.pdf', bbox_inches='tight')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Explore variations in prompts for MBTI"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def score_cols(row, score_names: list[str]):\n",
+    "    score = row['score']\n",
+    "\n",
+    "    for i, name in enumerate(score_names):\n",
+    "        row[name] = score[i]\n",
+    "    \n",
+    "    return row\n",
+    "\n",
+    "score_names = ['Extroverted', 'Sensing', 'Thinking', 'Judging']\n",
+    "\n",
+    "df_mbti = df.apply(score_cols, axis=1, score_names=score_names)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display_names = {\n",
+    "    'personality_test': 'Personality -  1',\n",
+    "    'qa2': 'QA - 2',\n",
+    "    'personality_test_basic': 'Personality - 2',\n",
+    "    'basic': 'Basic',\n",
+    "    'qa': 'QA - 1'\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from itertools import product\n",
+    "import seaborn as sns\n",
+    "from matplotlib import pyplot as plt\n",
+    "import random\n",
+    "\n",
+    "prompts = display_names.keys()\n",
+    "p_results = {\n",
+    "    k: df_mbti[df_mbti['prompt'] == k][score_names].to_numpy()\n",
+    "    for k in prompts\n",
+    "}\n",
+    "\n",
+    "def test_mse(a, b):\n",
+    "    return np.square(a - b).mean(axis=1).mean(axis=0)\n",
+    "\n",
+    "test_matrix = np.zeros((len(prompts), len(prompts)))\n",
+    "\n",
+    "prompts = sorted(list(prompts))\n",
+    "\n",
+    "for (i, test_1), (j, test_2) in product(enumerate(prompts), enumerate(prompts)):\n",
+    "    if test_1 == test_2:\n",
+    "        continue\n",
+    "    \n",
+    "    test_matrix[i, j] = test_mse(p_results[test_1], p_results[test_2])\n",
+    "\n",
+    "prompts = [display_names[p] for p in prompts]\n",
+    "\n",
+    "sns.heatmap(\n",
+    "    test_matrix,\n",
+    "    xticklabels=prompts,\n",
+    "    yticklabels=prompts,\n",
+    "    cmap='viridis'\n",
+    ")\n",
+    "\n",
+    "# plt.title('Similarity between different prompting methods (MSE)')\n",
+    "plt.xlabel('Prompt 1')\n",
+    "plt.ylabel('Prompt 2')\n",
+    "\n",
+    "plt.savefig('figs/prompt_similarity.pdf', bbox_inches='tight')"
    ]
   }
  ],
